<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/monsters"
    android:id="@+id/activity_end">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="#f5f4f4"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/muteSounds"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/crown_icon"
                android:textColor="#f5f4f4"
                >

            </ImageView>

        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/confeti1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <RelativeLayout
            android:id="@+id/confeti2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>



    </LinearLayout>


    <TextView
        android:id="@+id/ScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:paddingTop="100dp"
        android:text="@string/points_text"
        android:textSize="30sp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textStyle="bold|italic"
        />

    <TextView
        android:id="@+id/pointsYouHaveSoFar"
        android:layout_below="@id/ScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer">
    </com.google.android.gms.ads.AdView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/adView1"
    >

    <Button
        android:id="@+id/btnNextLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_level"
        android:textColor="#fff5f5"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/btnPreviousLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_level"
        android:textColor="#fff5f5"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textColor="#fff5f5"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle"
        android:layout_alignParentRight="true"/>

</LinearLayout>



</RelativeLayout>